# SQUARNA

./: .gitignore  1000.conf  1_PreQ1_riboswitch_B_subtilis_195.fas  1_PreQ1_riboswitch_B_subtilis_20.fas  1_PreQ1_riboswitch_B_subtilis_65.fas  1_PreQ1_riboswitch_B_subtilis_curated.fas  1_PreQ1_riboswitch_B_subtilis_seed.fas  500.conf  Benchmarking.py  BenchmarkingAlignment.py  BenchmarkingAlignmentShape.py  BenchmarkingSingleSeq.py  BenchmarkingSingleSeqShape.py  CoRToise.fas  CoRToise150.fas  README.md  RF00162.afa  RNAStralignExt_RNAalifold.fas  RNAStralignExt_SQUARNAs1.tsv  RNAStralignExt_SQUARNAs2.fas  RNAStralignExt_SQUARNAs2.tsv  RNAStralignExt_SQUARNAs3i.fas  RNAStralignExt_SQUARNAs3u.fas  RNAStralignExt_SQUARNAs3u.tsv  Rfam14.9_IPknot.fas  Rfam14.9_IPknot.tsv  Rfam14.9_IPknot_save.fas  Rfam14.9_IPknot_save.tsv  Rfam14.9_RscapeNested.tsv  Rfam14.9_RscapeTotal.fas  Rfam14.9_RscapeTotal.tsv  RfamPDB_RscapeTotal.fas  RfamPDB_RscapeTotal.tsv  RfamPDB_SQUARNAs2.fas  RfamPDB_SQUARNAs2.tsv  S01_SQUARNA.fas  S01_SQUARNA.tsv  S01_SQUARNA5.txt  S01_SQUARNA5_fasterdef.txt  S01_SQUARNA5_mat.txt  (+92 more)
benchmark/: CoRToise.tsv  CoRToise_IPknot.fas  CoRToise_IPknot.tsv  CoRToise_Mxfold2.tsv  CoRToise_RNAfold.fas  CoRToise_SQUARNA2.tsv  CoRToise_SQUARNA3.fas  CoRToise_consensus4.fas  CoRToise_consensus5.fas  TS1reduced.tsv  TS1reduced_RNAfold.tsv  TS1reduced_SPOTRNA.fas  TS1reduced_SPOTRNA.tsv  TS1reduced_SQUARNA1.fas  TS1reduced_SQUARNA1.tsv  TS1reduced_SQUARNA2.fas  TS1reduced_SQUARNA2.tsv  TS1reduced_SQUARNA3.fas  TS1reduced_SQUARNA3.tsv  TS1reduced_consensus4.fas  TS1reduced_consensus5.tsv  summary.tsv  summary.xlsx
benchmarks/: Covarying.tsv  README.md  RNAStralignExt.tsv  Rfam14.9.tsv  RfamPDB.tsv  Ribonanza.tsv  S01.tsv  SQRNdbnseq.py  SRtest.tsv  SRtrain.tsv  SRtrain.xlsx  SRtrain150.xlsx  SRtrain150NL.xlsx  SRtrainNL.xlsx  SeqSim.tsv  Stems.py  SubAli.tsv  TS1reducedWC.tsv  TS1reducedWC.xlsx  TS1reducedWCNL.xlsx  Violins.ipynb  summary.xlsx  summary_Ribonanza.xlsx  summary_S01.xlsx  summary_ali.xlsx  summary_seq.xlsx
(+22241 files in other folders)
