[build-system]
requires = ["hatchling",]
build-backend = "hatchling.build"

[project]
name = "SQUARNA"
version = "3.0"
dependencies = [
  "numpy",
  "scipy",
  "networkx",
  "viennarna",
]
authors = [
  { name="Eugene F. Baulin", email="efbaulin@gmail.com" },
]
maintainers = [
  { name="Eugene F. Baulin", email="efbaulin@gmail.com" },
]
description = "SQUARNA tool for RNA secondary structure prediction"
readme = "src/SQUARNA/README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/febos/SQUARNA"
Issues = "https://github.com/febos/SQUARNA/issues"

[project.scripts]
SQUARNA = "SQUARNA:Main"
Squarna = "SQUARNA:Main"
squarna = "SQUARNA:Main"
SQUARNA-build-rfam = "SQUARNA:BuildRfam"
squarna-build-rfam = "SQUARNA:BuildRfam"
Squarna-build-rfam = "SQUARNA:BuildRfam"
SQUARNA-build-Rfam = "SQUARNA:BuildRfam"
squarna-build-Rfam = "SQUARNA:BuildRfam"
Squarna-build-Rfam = "SQUARNA:BuildRfam"

